@@ -1,5 +1,6 @@
-#readelf: -wf
+#objdump: -Wf
 #name: CFI on i386
+#...
 Contents of the .eh_frame section:
 
 00000000 00000014 00000000 CIE
