@@ -2,8 +2,8 @@
 #name: reloc-pe-i386
 #...
 RELOCATION RECORDS FOR \[.debug_frame\]:
-OFFSET           TYPE              VALUE 
-000000000000001c secrel32          .debug_frame
-0000000000000020 .* .text
+OFFSET .* TYPE .* VALUE 
+0.* secrel32 .* .debug_frame
+0.* .* .text
 
 
