@@ -1,3 +1,9 @@
+2010-10-03  Kai Tietz  <kai.tietz@onevision.com>
+
+	* gas/cfi/cfi-i386.d: Use objdump -Wf instead of readelf.
+	* gas/cfi/cfi-i386.s: Remove .type directives.
+	* gas/cfi/reloc-pe-i386.d: Adjust test for i386.
+
 2010-09-02  Richard Henderson  <rth@redhat.com>
 
 	* gas/cfi/cfi-common-1.d: Use objdump instead of readelf to dump.
